# TEA-SDD

./: README.md
src/: CMakeLists.txt  README.txt  bicolor-tree.c  bicolor-tree.h  gen-data-rb.c  plot.gp  test-menu-simple.c  test-menugtk-bitree.c
src/avl-tree/: avl-tree.c  gen-data-avl.c
